--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.22.0",
+    "@supabase/supabase-js": "^2.74.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.22.0",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1"
   },
