--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "encontro-certo",
+  "name": "encontro-certo-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.22.0",
-    "@supabase/supabase-js": "^2.74.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "@google/genai": "^1.22.0",
     "react-router": "^6.25.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "@supabase/supabase-js": "^2.44.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
